--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   dartx: ^1.2.0
   dio: ^5.4.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.9
+  fluttertoast: ^8.2.4
   get_it: ^7.6.6
   go_router: ^13.0.1
   google_fonts: ^6.1.0
